# oo

./: .clang-format  .clang-tidy  .clangd  .cmake-format.yaml  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build-all.sh  vcpkg.json
cmake/: dev-mode.cmake  prelude.cmake  variables.cmake
src/: action.cpp  action.hpp  avatar.cpp  avatar.hpp  colonist.cpp  colonist.hpp  color.hpp  dimension.hpp  energy.hpp  game.cpp  game.hpp  geometry.cpp  geometry.hpp  graphics_backend.hpp  input_manager.cpp  input_manager.hpp  log.cpp  log.hpp  main.cpp  map.cpp  map.hpp  point.hpp  rng.cpp  rng.hpp  sdl_backend.cpp  sdl_backend.hpp  terminal.cpp  terminal.hpp  tile.hpp
test/: CMakeLists.txt
test/src/: color.cpp  dimension.cpp  geometry.cpp  log.cpp  terminal.cpp
tools/iwyu/: gcc.stdlib.imp
